<?xml version="1.0"?>
<package format="2">
  <name>iiwa_gazebo</name>
  <version>1.4.0</version>
  <description>This package allows to load a KUKA LBR IIWA in Gazebo Simulation</description>
  <maintainer email="some@some.com">Some Some</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>iiwa_description</depend>
  <depend>gazebo_ros</depend>

</package>
